--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
 gradio
 moviepy
-yacs==0.1.8
-scipy==1.7.3
-scikit-image==0.19.3
-scikit-learn==1.0.2
-PyYAML==6.0
-Pillow==9.1.0
-numpy==1.21.5
+yacs
+scipy
+scikit-image
+scikit-learn
+PyYAML
+Pillow
+numpy
 opencv-python
-#opencv-python==4.4.0.46
-imageio==2.18.0
-ffmpeg-python==0.2.0
-av==10.0.0
+imageio
+ffmpeg-python
+av
 transformers
 dlib
 urllib3
